--- a/Paper/Review.tex
+++ b/Paper/Review.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt]{article}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
+\usepackage[framemethod=tikz]{mdframed}
 \usepackage{ifxetex,ifluatex}
 %\usepackage{fixltx2e} % provides \textsubscript
 \usepackage{xr} % referencing external ducument
@@ -79,9 +80,18 @@
 \floatplacement{figure}{H}
 \begin{document}
 
-We thank the editor and all three reviewers for their very constructive feedback. We also received feedback from Harald Ringbauer and Shai Carmi on details of the derivations, which we also incorporated in our revised manuscript. As a result, we feel that our changes address all major points of criticism raised during the review process, and hope you will find the revised manuscript suitable for publication.
+We thank the editor and all three reviewers for their very constructive feedback. We also received feedback from Harald Ringbauer and Shai Carmi on details of the derivations, which we also incorporated in our revised manuscript. As a result, we feel that the current version of the manuscript is much improved, and hope we satisfactorily address all major issues raised during the review process.
 
-\textbf{TODO}: add summary of changes
+In particular, we made the following major changes:
+\begin{itemize}
+    \item We completely reworked the \textbf{theory section}, and now derive the theory for segments and ALD independently to remove the disconnect between the theory and applications noted particularly by reviewer 1. 
+    \item We also added an \textbf{Appendix} where we detail the effect of the simplifications we made, and how the theory were to change if one incorporated e.g. genetic drift.
+    \item We now focus more on model choice, as suggested by reviewer 1. For this purpose, we added a new \textbf{Figure 2}, with model-choice results under an idealized scenario. 
+    \item We completely reworked \textbf{Figure 3}, to also include model choice between the simple and extended pulse model, and comparisons between segment-based inference and ALD inference (as suggested by reviewer 1), changed the parameter setting to one more directly relevant to Neandertal gene flow (as suggested by reviewer 2), and, in panel C adding curves showing the fit of the data to the predictions (as suggested by reviewer 3).
+    \item We removed the old figure 2, which discussed the accuracy of estimated admixture times (using ALD) for simulations under both models. This information is now contained in the much more comprehensive Figure 3. 
+\end{itemize}
+
+We also made a large number of smaller changes based on the reviewer feedback. Please see our detailed responses below.
 
 \section{Reviewer 1}\label{Reviewer 1}
 
@@ -94,7 +104,7 @@ A secondary question that is analytically tractable is how the power described a
 \paragraph{Answer to 1.1 and 1.2}
 We agree that these are two important points that were poorly supported in the previous version of the manuscript. We performed an analysis addressing these two points, assuming fragments are fully observed (new \textbf{Figure 2}) as suggested in point 1, and sample at present-time and 50 generations after gene flow ended.
 
-Our results show, that from present-day data, even 100,000 admixture segments, are not sufficient to distinguish admixture event spanning \~400 generations from a single pulse; whereas an event spanning 20 generations is detectable 50 generations later. This pattern is consistent for less data, and supports the previously intuitive argument that ancient DNA would help us better estimate the duration of gene flow.
+Our results show that from present-day data, even 100,000 admixture segments are not sufficient to distinguish admixture event spanning \~400 generations from a single pulse; whereas an event spanning 20 generations is detectable 50 generations later. This pattern is consistent for less data, and supports the previously intuitive argument that ancient DNA would help us better estimate the duration of gene flow.
 
 
 \paragraph{3.}
@@ -115,12 +125,6 @@ In the analysis, we now added \textbf{Figure 3} in which we perform model compar
 We did not investigate ALD at multiple scales because for these admixture time scales the ALD-curve quickly reaches values extremely close to zero, so we would not think that this makes a substantial difference in the analysis. 
 
 
-
-
-\paragraph{Answer to 1.4}
-We compare on msprim simulations with tm 15000 and different durations segment length and ALD, with inferred and actual segments. We use Skov et al. 2018 to infer the segments. 
-
-We agree that the previous version had a slight disconnect between the theory section and the inference. Based on various feedback; this is no longer the case and we now derive ALD and segments independently; added an additional analysis based on "ideal data" (Figure 2) and compare parameter inference between the two approaches directly (new Figure XX and answer to Query 3).
 
 \subsection{Minor Comments}\label{Minor Comments}
 
@@ -154,13 +158,18 @@ I would suggest a “requirements.md” or “requirements.txt” file in the ma
 My main concern relates to the “Application to Neandertal data.” My understanding of the manuscript title (An extended admixture pulse model reveals the limits to the dating of Human-Neandertal introgression) is that the extended model provides the limits (or bounds) for the dating of introgression. I do not think that this manuscript shows that. Instead, it seems like the application to Neandertal data shows that there is little power to differentiate tested scenarios (with varying gene flow durations). Perhaps the word “limits” in the title refers to the *limitations* of the model? I would like to hear from the authors about their intent and, if my understanding of the title is correct (i.e., limits == bounds), then I would like to see a more detailed discussion about this issue in the manuscript see comments below.
 
 \paragraph{Answer to 2.1}
-As non-native English speaker, we were not aware of the linguistic subtlety between ``limits'' and  ``limitations'', and suspect that many readers also will not be too concerned about this. We changed the title to ``An extended admixture pulse model reveals the limitations to Human-Neandertal introgression dating''. The latter change was necessary to remain under the 100-character title limit.
+As non-native English speakers, we were not aware of the linguistic subtlety between ``limits'' and  ``limitations'', and suspect that many readers also will not be too concerned about this. To avoid ambiguity, we changed the title to ``An extended admixture pulse model reveals the limitations to Human-Neandertal introgression dating''. The latter change was necessary to remain under the 100-character title limit.
 
 \paragraph{2.}
 Overall, I think this subsection of Results is a bit underwhelming and somewhat disconnected from the part where authors examine their model with simulations. Given how the problem is introduced and the manuscript is presented, I would expect a more thorough examination of both the duration and mean time of Neandertal-human introgression. I think it is worth mentioning in the “Application to Neandertal data” section what are the estimates for the mean time of admixture and how they compare with published data. I understand this has been reported in previous studies, but I believe it would be important to report the estimates using their methods in a paper like this.
 
 \paragraph{Answer to 2.2}
-We do report all major previous (genetic) estimates of Neandertal gene flow dates in the introduction (section Neandertal gene flow estimates). We now also briefly discuss our results, and the inability to distinguish various events in the results section ``Application to Neandertal data''.  \textbf{TODO add Discussion section}.
+We do report all major previous (genetic) estimates of Neandertal gene flow dates in the introduction (section \textbf{Neandertal gene flow estimates}). We now also briefly discuss our results, and the inability to distinguish various events in the results section \textbf{Application to Neandertal data}.
+
+We also added a section in the discussion where we explicitly compare our estimates with previous estimates, and discuss the implications:
+
+\begin{mdframed}[hidealllines=true,backgroundcolor=grey!20]
+Our estimate of the tm for Neandertal gene flow of 1,682 generations corresponds to a mean time estimate of 49ky (assuming a generation time of 29 years), with bounds of 44-54ky. This is in almost perfect agreement with the previous result of Moorjani 2016, which is based on largely the same method. However, here we show that models of extended gene flow with td up to a thousand generations provide very similar fits to the data; and that marginally better fits are achieved with very long gene flows. However, these models all would have Neandertals survive until around 30kya, whereas archaelogical evidence for Neandertals surviving beyond 40ky is increasingly sparse Hublin 2017, so that these models of extremely long gene flow might be rejected on these grounds.\end{mdframed}
 
 \paragraph{3.}
 I would also like to hear from the authors the reasons why the specific scenarios were chosen for the simulations. Since the paper focuses on Neandertal-Human introgression and the range for the dating of this event is well known (37-86kya, 41-54kya, or 50-60kya as reported by the authors), then I would expect the simulations to cover this range. Perhaps I missed something, but the simulated scenarios seem to include mostly very recent dates for introgression. The few examples where mean time of admixture match what is known for the Neandertal-Human introgression use the same duration of gene flow (800 generations). How does the inference work for shorter durations? It would be great to see with simulations if the estimates for the duration of admixture are robust for an admixture time that matches the expected range for Neanderthal introgression. Perhaps the application to the data does that already, but still, it is good to see how good the inferences for plausible scenarios are especially considering different admixture durations.
@@ -172,8 +181,12 @@ We agree that the scenarios chosen for simulations in the previous version of th
 Generally speaking, I miss some discussion about the applicability of this model to the study of other events in human history/evolution and beyond humans.
 
 \paragraph{Answer to 2.4}
-\textbf{TODO}
-Add to discussion: Theory is general, and not restricted by model system, but assumes admixture fraction is low. For simulations, we focus on scenario of Neandertal-Human admixture because this was our primary goal. Other events at similar time-scales should behave similarly (i.e. Denisovan admixture, or other events on the order of thousands of generations). 
+We agree that the discussion could be expanded in this direction. We changed the first paragraph of the introduction to reflect this:
+
+\begin{mdframed}[hidealllines=true,backgroundcolor=grey!20]
+In this paper, we develop a new population genetic model for dating extended pulses of gene flow. One appealing feature of our model is that it has just two parameters, that can be interpreted as the mean time and duration of gene flow; which leads to simple closed form solutions, and we show that both an instantaneous pulse and continuous migration models can be thought of as special cases where the duration is extremely short or long, respectively. This makes this model generally applicable beyond gene flow between Neandertals and humans, which was the motivation and focus of this study. In fact, we find that we have much more power to investigate recent gene flow, so that this model should be particularly powerful if gene flow has been very recent. One restriction is that we assume that the overall amount of introduced material is low, and that we ignore the effects of genetic drift and selection.\end{mdframed}
+
+
 
 \subsection{Minor Comments}\label{Minor Comments}
 
@@ -231,20 +244,13 @@ References to supplementary figures lack the word “Figure.”
 As shown in their figures, the current version of this method is a biased method. Therefore, the single major concern I have about their paper is that it lacks explanations and investigations on the bias and variance of this newly proposed method. Hence some improvements are needed. In particular, why is it a biased method, and is it possible to improve on it further?
 
 \paragraph{Answer to 3.1}
-We agree that the biases in the estimates of $t_d$ and $t_m$ are unfortunate, and we note that the entire section ``Comparing effect sizes for technical covariates'' deals with investigating the various sources of bias of $t_m$. 
-
-We improved this in the current version of the manuscript as follows:
-
-\emph{Theory section} \textbf{TODO} We added a section where we discuss some model assumptions we make for simplification, and discuss how they impact our inference.
-\emph{Analysis}: 
-\emph{Discussion:}
+We agree that the biases in the estimates of $t_d$ and $t_m$ are unfortunate, and we note that the entire section \textbf{Comparing effect sizes for technical covariates} deals with investigating the various (technical) sources of bias of $t_m$. 
 
 \paragraph{2.}
 Simulation: the basic version of msPrime does not shine at simulating long-range LD in recent generations, and therefore it was recommended, when long-range correlations are used, the msPrime with Wright-Fisher extension should be used instead to overcome the biases in especially the recent time scale (see Nelson et al. 2020, PLoS genetics). When the admixture duration is long and extends to very recent time as in some of the simulations for the extended pulse model, and long-range information (LD, segment length) is used in inference, it might be essential to incorporate the WF extension in the simulation.Some of the biases perhaps would disappear with better simulation. It is also possible that a more realistic simulation would lead to even larger bias, which would also be essential to know.
 
 \paragraph{Answer to 3.2}
-We verified that we are outside the parameter range that this is a concern by redoing the most extreme scenario we use using either simulation scheme. We do not find any difference between the two models (see attached figure), so we feel confident that this likely will not impact our results.
-
+We verified that we are outside the parameter range that this is a concern by redoing the most extreme scenario we use using either simulation scheme. We do not find any difference between the two models (see attached figure), so we feel confident that this is a very unlikely source of bias.
 
 \begin{figure}
 \centering
@@ -253,7 +259,7 @@ We verified that we are outside the parameter range that this is a concern by re
 \end{figure}
 
 \paragraph{3.}
-Model: I wonder if the authors decided to dismiss the admixture fraction too soon without giving enough justifications (on page 8 line 24-24). While this assumption that recombination within archaic segments can be ignored is perhaps justifiable in some previous work, this paper works on a more delicate problem, and subtle signals and biases matter more. To differentiate single pulse and extended pulse, fixed admixture fraction in a single pulse and increasing admixture fraction over time in the extended pulse is a signature of these different admixture models. I wonder if some of the biases in their method is related to this simplification. To elaborate, let’s assume total admixture fraction is $\alpha$, and recombination rate r, mean time of admixture T, under a single pulse model, the effective recombination rate which will affect the introgressed segment length with rate $(1-\alpha)$ rT, rather than rT. Because the authors convert the length to cM, the (1-α) factor would affect T and can lead to a directional bias as observed in single pulse model. Under the extended pulse framework, the recombination rate for segments entering human population at time t is:
+Model: I wonder if the authors decided to dismiss the admixture fraction too soon without giving enough justifications (on page 8 line 24-24). While this assumption that recombination within archaic segments can be ignored is perhaps justifiable in some previous work, this paper works on a more delicate problem, and subtle signals and biases matter more. To differentiate single pulse and extended pulse, fixed admixture fraction in a single pulse and increasing admixture fraction over time in the extended pulse is a signature of these different admixture models. I wonder if some of the biases in their method is related to this simplification. To elaborate, let’s assume total admixture fraction is $\alpha$, and recombination rate r, mean time of admixture T, under a single pulse model, the effective recombination rate which will affect the introgressed segment length with rate $(1-\alpha)$ rT, rather than rT. Because the authors convert the length to cM, the $(1-\alpha)$ factor would affect T and can lead to a directional bias as observed in single pulse model. Under the extended pulse framework, the recombination rate for segments entering human population at time t is:
 
 
 $$R(t) = \int_{0}^{t}{\left(1-\alpha\ Pr(T=s)\right)r\ ds}$$,
@@ -268,13 +274,15 @@ $$  P(T_i=t)=\frac{1}{\Gamma(k)(\frac{t_m}{k})^k}t^{k-1}e^{-t\frac{k}{t_m}}$$
 This should result in a simple transformation w.r.t $\alpha$. The point is that it seems the math would still be straightforward even when admixture fraction is included (or numerical integration could be used), then why not give it a try and see if the method could be improved further?
 
 \paragraph{Answer to 3.3}
-We do agree that these elaborations are intuitively reasonable, but to show where/if they hold we would have to develop an SMC or SMC'-like model in quite some detail, which we feel is beyond the scope of the current paper. 
+We do agree that these elaborations are intuitively reasonable, but to show where/if they hold we would have to develop an SMC or SMC'-like model in quite some detail, which we feel is beyond the scope of the current paper. Moreover, we found that with the way that we consider linkage disequilibrium separately, we are able to include the migration fraction in a much more direct way in our model. 
 
-Moreover, we found that with the way that we consider linkage disequilibrium separately, we are able to include the migration fraction in a much more direct way in our model.
+We hope that the clarifications made in the theory section (also motivated by other comments, see above), now make it more clear what the assumptions of our very simple model are.
 
-make sense under the assumption that recombination during the admixture event can be neglected. However, we also found (based on comments on our preprint) that our derivation of the ALD was slightly off, so we decided to derive it from scratch, and it turns out that the admixture fraction is included as a constant in the ALD, so this should not lead to a bias. Genetic drift is another concern, and we discuss in the new theory supplemental section \textbf{Approximation details}.
+In addition, we added an \textbf{Appendix} where we add many further details and outline some calculations if one chose to include the effects of genetic drift and recombination between introgressed material. In particular, we show that the ALD model we use can be motivated by the solution to a differential equation where ALD is introduced by gene flow, and decays by recombination. We also outline that replacement of previously introgressed material by new introgressed material could be accommodated in a framework very similar to the one suggested by the reviewer, but we do not pursue that further because we think the effect will be small.
 
-\textbf{Data}: Add (1-m)-term is not sufficient, likely due to drift.
+Finally, we outline the standard theory (from Liang \& Nielsen 2014) for the single pulse and how recombination and drift would affect our inference, and show that the bias due to these factors is very moderate for our parameters of interest, in the order of 10\%.
+
+Taken together, we hope that these clarifications as well as the appendix show that the bias introduced by our modelling assumptions are likely small.
 
 \paragraph{4.}
 Inference: It seems the parameter inference is made by non-linear least-square optimization when alternatively, some maximum likelihood optimizations could be used. Could the authors provide more information about how good the fitting is per simulation? In particular, if the simulated parameters may actually give a higher likelihood.
@@ -282,7 +290,7 @@ Inference: It seems the parameter inference is made by non-linear least-square o
 \paragraph{Answer to 3.4}
 We are not aware of any likelihood-based inference framework based on ALD, as the resulting summary statistic is an (approximated) LD-decay curve. We  note that all state-of-the-art methods for this purpose use least-squares techniques similar to what we are using here (ALDER; Loh et al. 2013, DATES Narasimhan et al 2018, Globetrotter, Hellenthal et al. 2014). If admixture segments were perfectly known, then likelihood-based inference can be performed, but the issue is in identifying the fragments, and to propagate the uncertainty in fragment estimation.
 
-In \textbf{Figure 3C}, we now show the fitted curves for both true segments, inferred segments as well as the raw ALD data. We think this shows that the likelihood inference procedure or ALD fitting is unlikely to be a source of major bias.
+In \textbf{Figure 3C}, we now show the fitted curves for both true segments, inferred segments as well as the raw ALD data. We think this shows that the fitting itself is unlikely to be a source of major bias. However, in the section \textbf{Comparing effect sizes for technical covariates} we show that many seemingly innocuous choices of inference settings can lead to some biases.
 
 \paragraph{5.} 
 Data: As primarily a new method paper, it would be nice to provide guidance about how much data is needed to make these inferences. 
@@ -290,11 +298,8 @@ How does the accuracy of ALD from ALDER affect the variance and bias in the infe
 How does ascertainment of introgressed mutations affect the accuracy? 
 
 \paragraph{Answer to 3.5}
-We address these concern in \textbf{figure 4} and section Compariong effect sizes for covariates. 
+We address these concern in \textbf{Figure 4} and section \textbf{Compariong effect sizes for covariates} by i) adding a ``downsampling''-parameter where we remove 95\% of SNPs, and ii) by fitting a second model where we compare the contributions of our modeling parameters on the mean absolute deviation. Somewhat surprisingly, we find that we get only slightly worse estimates from downsampled data, and that issues due to misspecification are much more important. 
 
-\textbf{TODO}: Model with variance/deviation
-
-We included an analysis on accuracy of the ALD estimation in our result section on effect size estimates. Here, we downsampled the available SNPs to 5 \% of the simulated data and re-fitted the model. We did that for all parameters. We estimated the effect size of the downsampling with our GLM (Figure 4). We find that the effect size of downsampling is negligible, suggesting that relatively little data is sufficient to estimate an unbiased ALD curve. Additionaly, we estimated the interaction of downsampling and ascertainment scheme. 
 
 \paragraph{6.} 
 Discussion: I wonder if the first paragraph of the discussion could be rephrased a little bit. It seems obvious that the previous estimates are the CI rather than the bounds of the duration of gene flow. Is there any paper stating or interpreting them as the bounds of the duration of gene flow? It is also good to acknowledge and discuss that a method based on ALD or length of the segment might not be the ultimate method for addressing the admixture duration. An extended admixture affects coalescence time, site frequency spectrum, etc. Various aspects could be explored in the future.
@@ -302,19 +307,21 @@ Discussion: I wonder if the first paragraph of the discussion could be rephrased
 \paragraph{Answer to 3.6}
 We do agree that this should be phrased carefully, as it is a rather subtle point. However, the point we want to make here is that if the single pulse model were correct, then the bounds on the estimates of $t_m$ are  the bounds of when gene flow happened. So this is not a statistical error, but rather a case where the model is interpreted to literally. 
 
-We found numerous papers that based their interpretations (partially) on this, based on this work, flawed interpretation (see below).
-
+We found numerous papers that based their interpretations (partially) on this, in our eyes, flawed interpretation (see below).
 
 Douka et al. 2019 "Denisovans at the site appear to have survived later than Neanderthals. Our modelled date estimate for the most recent Denisovan fossil (Denisova 3, 51,600–76,200 years ago) is earlier than published estimates of the date of Denisovan admixture into modern humans (44,000–54,00015 and 31,000–50,000 years ago16). If these admixture estimates are robust, then the Altai Denisovans may not have been the latest-surviving population."
 
-Jacobs et al. 2019: "While the median block lengths of D1 and D2 are similar in Papuans (238 and 236 kb), their distributions are significantly different (Kolmogorov-Smirnov statistic = 0.15, p = 2.2 × 10−6). Exponential fitting of D1 and D2 haplotype lengths yields introgression dates of 29.8 kya (95 \% CI 14.4–50.4) and 45.7 kya (95 \% CI 31.9–60.7), respectively, which are younger, though overlapping with, previously suggested estimates for Denisovan introgression () (Malaspinas et al., 2016). The maximum likelihood introgression date for D2 introgression is 50 \% more ancient than the date for D1. Based on simulations, and given the greater statistical challenge of identifying shorter introgression blocks, we consider these dates to be probable lower bounds on introgression times, but with true dates no more than 15 \% more ancient.
+Jacobs et al. 2019: "While the median block lengths of D1 and D2 are similar in Papuans (238 and 236 kb), their distributions are significantly different (Kolmogorov-Smirnov statistic = 0.15, p = $2.2 \times 10−6$). Exponential fitting of D1 and D2 haplotype lengths yields introgression dates of 29.8 kya (95 \% CI 14.4–50.4) and 45.7 kya (95 \% CI 31.9–60.7), respectively, which are younger, though overlapping with, previously suggested estimates for Denisovan introgression () (Malaspinas et al., 2016). The maximum likelihood introgression date for D2 introgression is 50 \% more ancient than the date for D1. Based on simulations, and given the greater statistical challenge of identifying shorter introgression blocks, we consider these dates to be probable lower bounds on introgression times, but with true dates no more than 15 \% more ancient.
 
 D1 and D2 introgression times that overlap the timescale of modern human arrival and their variable dispersal across Papua raise the possibility that Denisovan introgression occurred after local populations of modern humans had differentiated."
 
 Lazaridis et al. 2016: "The finding of little if any Neanderthal ancestry in Basal Eurasians could be explained if the Neanderthal admixture into modern humans 50,000-60,000 years ago11 largely occurred after the splitting of the Basal Eurasians from other non-Africans."
 
-\textbf{To make this point more clear, we rephrased this section as follows:}
+To make this point more clear, we rephrased this section as follows:
 
+\begin{mdframed}[hidealllines=true,backgroundcolor=grey!20]
+Previous estimates to date Neandertal-human gene flow have focused almost entirely on the mean time of gene flow using a simple pulse model, for which reasonably tight credible intervals can be estimated (Sankararaman et al, Moorjani et al). Under this model, the credible intervals of this time are bounds of when gene flow between Neandertals and early modern humans could have happened. 
 
-Previous estimates to date Neandertal-human gene flow have focused almost entirely on the mean time of gene flow using a simple pulse model, for which reasonably tight credible intervals can be estimated. Under this model, the credible intervals of this time are bounds of when gene flow between Neandertals and early modern humans could have happened. Here, we show that the observed data is compatible with multiple scenarios, and that models involving hundreds of generations of gene flow are indistinguishable from shorter gene flow events. This means that while substantial amounts of gene flow happened around these mean times, gene flow might have also happened tens of thousands of years before or after. This is of great practical importance, as it makes linking genetic admixture date estimates with biogeographical events much more difficult
+Our estimate of the tm for Neandertal gene flow of 1,682 generations corresponds to a mean time estimate of 49ky (assuming a generation time of 29 years), with bounds of 44-54ky. This is in almost perfect agreement with the previous result of Moorjani et al 2016, which is based on largely the same method. However, here we show that models of extended gene flow with td up to a thousand generations provide very similar fits to the data; and that marginally better fits are achieved with very long gene flows. However, these models all would have Neandertals survive until around 30kya, whereas archaelogical evidence for Neandertals surviving beyond 40ky is increasingly sparse (Hublin 2017), so that these models of extremely long gene flow might be rejected on these grounds. 
+\end{mdframed}
 \end{document}
